# CLionProjects

./: .gitignore  .gitmodules
AudioDGAffinity/: CMakeLists.txt  main.cpp
BTree/: BTree.cpp  BTree.h  BTreeNode.cpp  BTreeNode.h  CMakeLists.txt  main.cpp
BTree_Jacob/: BTree.cpp  BTree.h  BTreeNode.cpp  BTreeNode.h  CMakeLists.txt  main.cpp
CAS_5B_Project/: CMakeLists.txt  main.cpp
CIS014_HW10/: CMakeLists.txt  HW10.cpp
CIS014_HW11/: CMakeLists.txt  HW11.cpp
CIS014_HW12/: CMakeLists.txt  HW12.cpp
CIS014_HW1_1/: CMakeLists.txt  HW1_1.cpp
CIS014_HW2_1/: CMakeLists.txt  HW2.cpp  HW2_1.cpp
CIS014_HW3/: CMakeLists.txt  HW3.cpp
CIS014_HW4_1/: CMakeLists.txt  HW4.cpp
CIS014_HW5/: CMakeLists.txt  HW5.cpp
CIS014_HW6/: CMakeLists.txt  HW6.cpp
CIS014_HW7/: CMakeLists.txt  HW7.cpp
CIS014_HW9/: CMakeLists.txt  HW9.cpp
CIS014_Lab7/: CMakeLists.txt  Lab7.cpp
CIS014_Midterm_Q8/: CMakeLists.txt  main.cpp
CIS014_Quiz5_Q8/: CMakeLists.txt  main.cpp
CS008_BTree/: BTree.cpp  BTree.h  CMakeLists.txt  main.cpp
CS008_BinarySearchTree/: A.cpp  A.h  BST.cpp  BST.h  CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.h  Traversal.h  main.cpp
CS008_Bouncing_Objects/: BouncingObject.cpp  BouncingObject.h  CMakeLists.txt  StatesENUM.h  main.cpp
CS008_CH10_Project_Q8/: BST.cpp  BST.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Traversal.h  TreeNode.h  main.cpp
CS008_CH6_Project_Q7/: CMakeLists.txt  Shuffle.cpp  Shuffle.h  main.cpp
CS008_CH9_Project_Q9/: AsterisksPattern.cpp  AsterisksPattern.h  CMakeLists.txt  main.cpp
CS008_DoublyLinkedList/: CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  Node.h  Node_Iterator.cpp  Node_Iterator.h  main.cpp
CS008_FileIO/: CMakeLists.txt  CrappyProgram.cpp  CrappyProgram.h  LoadableText.cpp  LoadableText.h  RandomColorSquare.cpp  RandomColorSquare.h  ResizeableCircle.cpp  ResizeableCircle.h
CS008_Graph/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
CS008_HashTable/: CMakeLists.txt  HashTable.cpp  HashTable.h  Record.h  main.cpp
CS008_Heap/: CMakeLists.txt  Heap.cpp  Heap.h  main.cpp
CS008_Maps/: CMakeLists.txt  main.cpp
CS008_NAryTree/: CMakeLists.txt  NAryTree.cpp  NAryTree.h  Node.h  main.cpp
CS008_NQueenRecursion/: CMakeLists.txt  NQueen.cpp  NQueen.h  main.cpp
CS008_NQueenStack/: CMakeLists.txt  NQueens.cpp  NQueens.h  main.cpp
CS008_SFML_FileIO/: CMakeLists.txt  CrappyProgram.cpp  CrappyProgram.h  LoadableText.cpp  LoadableText.h  RandomColorSquare.cpp  RandomColorSquare.h  ResizeableCircle.cpp  ResizeableCircle.h  main.cpp
CS008_SFML_FinalProject/: CMakeLists.txt  ColorBoxPicker.cpp  ColorBoxPicker.h  ColorHuePicker.cpp  ColorHuePicker.h  ColorPicker.cpp  ColorPicker.h  ColorSelector.cpp  ColorSelector.h  CursorBlink.cpp  CursorBlink.h  DisplayLogo.cpp  DisplayLogo.h  DropdownMenu.cpp  DropdownMenu.h  EventHandlerCallbacks.cpp  EventHandlerCallbacks.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  GUIComponent.cpp  GUIComponent.h  GUIComponentAdapter.cpp  GUIComponentAdapter.h  History.cpp  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  KBShortcuts.cpp  Label.cpp  Label.h  Letter.h  (+20 more)
CS008_SFML_MultiText/: CMakeLists.txt  CursorBlink.cpp  CursorBlink.h  EventHandlerCallbacks.cpp  EventHandlerCallbacks.h  GUIComponent.cpp  GUIComponent.h  GUIComponentAdapter.cpp  GUIComponentAdapter.h  History.cpp  History.h  HistoryNode.h  KBShortcuts.cpp  KBShortcuts.h  Label.cpp  Label.h  Letter.cpp  MultiText.cpp  MultiText.h  ResourceHolder.h  Snapshot.cpp  Snapshot.h  SnapshotInterface.cpp  SnapshotInterface.h  States.cpp  States.h  StatesENUM.h  SyntaxHighlighter.h  TextInput.cpp  TextInput.h  Typing.cpp  Typing.h  main.cpp
CS008_SFML_SaveImage/: CMakeLists.txt  ResourceHolder.cpp  ResourceHolder.h  main.cpp
CS008_SFML_Typing/: CMakeLists.txt  RichTextFormat.cpp  Typing.cpp  Typing.h  main.cpp
CS008_SFML_class_01-24-22/: CMakeLists.txt  a.cpp  a.h  main.cpp
CS008_SFML_shadow_box/: CMakeLists.txt  ResourceHolder.cpp  ResourceHolder.h  TextReflection.cpp  TextReflection.h  main.cpp
CS008_Simple_Calculator/: calcAdd.cpp  calcBase.cpp  calcHistory.cpp  calcInputsENUMS.h  main.cpp
CS008_class_01-26-22/: CMakeLists.txt
CS008_class_02_07_2022/: CMakeLists.txt  main.cpp
CS008_inheritance/: CMakeLists.txt  Person.cpp  Person.h  Student.cpp  Student.h
CS008_rpn/: CMakeLists.txt  RPN.cpp  RPN.h  main.cpp  rpn
CS008_sfeMovie/: BuildDir.var  Shell.cmake  SourceDir.var
CS008_sfmlTest/: CMakeLists.txt  main.cpp
CS008_star_lab/: CMakeLists.txt  main.cpp
CS014_HW8/: CMakeLists.txt  HW8.cpp
CS066_Project_0/: CMakeLists.txt  main.cpp
CS066_Project_1/: CMakeLists.txt  P1Data.txt  P2Data.txt  P3Data.txt  main.cpp
CS066_Project_2/: CMakeLists.txt
CS066_Project_2_mysource/: CMakeLists.txt
CS3A_CH15_Practice_Q2/: AdministrativeEmployee.cpp  AdministrativeEmployee.h  Administrator.cpp  Administrator.h  CMakeLists.txt  Employee.h  PermanentEmployee.cpp  PermanentEmployee.h  SalariedEmployee.cpp  TemporaryEmployee.cpp  TemporaryEmployee.h
CS_Tutoring_3A_JL_HW_2/: Book.cpp  Book.h  CMakeLists.txt  ChildrenBook.cpp  ChildrenBook.h  ComputerBook.cpp  ComputerBook.h  Novel.cpp  Novel.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
Kings_Corner/: Application.cpp  Application.h  BaseCard.cpp  BaseCard.h  BaseRank.cpp  BaseRank.h  BaseSuit.cpp  BaseSuit.h  CMakeLists.txt  CardHand.cpp  CardHand.h  CardPile.cpp  CardPile.h  CompassENUM.h  Deck.cpp  Deck.h  EventHandlerCallbacks.cpp  EventHandlerCallbacks.h  FoundationCompassCards.cpp  FoundationCompassCards.h  GUIAdapter.cpp  GUIAdapter.h  GUIComponent.cpp  GUIComponent.h  GUI_Circle.cpp  GUI_Circle.h  MouseEvents.cpp  MouseEvents.h  RanksENUM.h  ResourceHolder.cpp  ResourceHolder.h  RoundedRectangleShape.cpp  SFMLCard.cpp  SFMLCard.h  SFMLCardCorner.cpp  SFMLCardCorner.h  SFMLCardOutline.cpp  SFMLCardOutline.h  SFMLCardPile.cpp  SFMLCardPile.h  (+11 more)
MateROV/: CMakeLists.txt  Controller.cpp  Controller.h  Visual.cpp  Visual.h  main.cpp
(+449 files in other folders)
