cmake_minimum_required(VERSION 3.20)
project(CS3A_CH15_Practice_Q2)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS3A_CH15_Practice_Q2 main.cpp SalariedEmployee.cpp SalariedEmployee.h Employee.cpp Employee.h Administrator.cpp Administrator.h TemporaryEmployee.cpp TemporaryEmployee.h AdministrativeEmployee.cpp AdministrativeEmployee.h PermanentEmployee.cpp PermanentEmployee.h)
