cmake_minimum_required(VERSION 3.24)
project(CS_Tutoring_3A_JL_HW_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(CS_Tutoring_3A_JL_HW_2 main.cpp Book.cpp Book.h ChildrenBook.cpp ChildrenBook.h ComputerBook.cpp ComputerBook.h Novel.cpp Novel.h Person.cpp Person.h Student.cpp Student.h Teacher.cpp Teacher.h)
